--- a/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         </a>
                     </li>*@
                     <li class="@Request.ActiveCssClass("~/me")">
-                        <a href="~/me">
+                        <a target="_blank" href="http://mara.neptuo.com">
                             Me
                             <span class="glyphicon glyphicon-user"></span>
                             <span class="subtext">About me</span>
