Filling home page.

--- a/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!doctype html>
+﻿@{
+    var meLink = "http://mara.neptuo.com";
+}
+<!doctype html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -39,7 +42,7 @@
                         </a>
                     </li>*@
                     <li class="@Request.ActiveCssClass("~/me")">
-                        <a target="_blank" href="http://mara.neptuo.com">
+                        <a target="_blank" href="@meLink">
                             Me
                             <span class="glyphicon glyphicon-user"></span>
                             <span class="subtext">About me</span>
@@ -63,7 +66,7 @@
                     Neptuo &copy; 2010 - 2016
                 </div>
                 <div class="right">
-                    Created by <a href="~/me">Marek Fišera</a>
+                    Created by <a target="_blank" href="@meLink">Marek Fišera</a>
                 </div>
                 <div class="clear"></div>
             </div>
