Change icon in VSIX. Add folder for is4wfw.

--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -40,7 +40,7 @@
     </div>
     <div class="folder">
         <h2 class="folder-heading">
-            <img src="https://visualstudioaddins.files.wordpress.com/2015/12/visual-studio-2015-update-1-icon.png" height="30" />
+            <img src="https://mygetwww-2e16.kxcdn.com/Content/images/packageDefaultIcon_vsix.png?c=Mi4xLjAuMjEwNw==" height="30" />
             @Html.ActionLink("Visual Studio Extensions", "Project", new { type = "vsix" })
         </h2>
 
@@ -61,6 +61,13 @@
         </p>
         <p>
             These applications are written in .NET, so requires it installed on your machine.
+        </p>
+    </div>
+    <div class="folder">
+        <h2 class="folder-heading">is4wfw</h2>
+
+        <p>
+            ...
         </p>
     </div>
     <div class="folder">
