--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -16,7 +16,14 @@
         <h2 class="folder-heading">TemplateEngine</h2>
 
         <p>
-            ...
+            The TemplateEngine is a proof of concept. It's information system build on UI templates that are compiled to server side .NET assembly 
+            and to a javascript. When the user first hits the URL, server-side pre-rendered HTML is loaded and displayed. All the interactions
+            that follows are handled by javascript and so the data transfer between server and the client is minimal (JSON over AJAX).
+        </p>
+        <p>
+            The prototype focuses on "develop once" and run both on server and client. All the UI components, data sources and controllers are designed
+            in a way that there is no difference if the code is run on client using AJAX and so on, or if the interaction is done through standard
+            HTTP requests and responses without any javascript involved.
         </p>
     </div>
 
