Add template engine icon.

--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -13,7 +13,10 @@
 
 <div class="container">
     <div class="folder">
-        <h2 class="folder-heading">TemplateEngine</h2>
+        <h2 class="folder-heading">
+            <span class="glyphicon glyphicon-tree-deciduous"></span>
+            TemplateEngine
+        </h2>
 
         <p>
             The TemplateEngine is a proof of concept. It's information system build on UI templates that are compiled to server side .NET assembly 
