--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -17,6 +17,8 @@
             <span class="glyphicon glyphicon-tree-deciduous"></span>
             TemplateEngine
         </h2>
+        
+        <h1 style="color: red">TODO: Upravit nte-admin.aspone.cz tak, aby nešli editovat objekty s ID=1, a zpřístupnit veřejně...</h1>
 
         <p>
             The TemplateEngine is a proof of concept. It's information system build on UI templates that are compiled to server side .NET assembly 
@@ -55,8 +57,8 @@
         </h2>
 
         <p>
-            As we love Visual Studio, this section contains some extensions. These extensions can be installed
-            from <a href="https://www.myget.org/F/neptuo-dev/vsix/">myget feed</a>.
+            As we love Visual Studio, this section contains some extensions. These extensions currently can't be installed from
+            standart Visual Studio gallery, instead are placed int the public <a href="https://www.myget.org/F/neptuo-dev/vsix/">MyGet Feed</a>.
         </p>
     </div>
     <div class="folder">
