--- a/Neptuo.WebSite/Views/Content/Project.cshtml
+++ b/Neptuo.WebSite/Views/Content/Project.cshtml
@@ -13,6 +13,8 @@
 </div>
 
 <div class="container">
+    <input id="search" type="text" class="folder" placeholder="Search projects..." />
+
     @foreach (var project in Model)
     {
     <div class="folder">
