--- a/Neptuo.WebSite/Views/Content/Project.cshtml
+++ b/Neptuo.WebSite/Views/Content/Project.cshtml
@@ -17,7 +17,7 @@
 
     @foreach (var project in Model)
     {
-    <div class="folder">
+    <div class="folder" data-search="@project.Name.ToLowerInvariant()">
         <h2 class="folder-heading">
             <a href="@Url.RouteUrl("Project", new { type = project.Type, project = project.LocalUrl })">@project.Name</a>
         </h2>
@@ -63,3 +63,26 @@
     </div>
     }
 </div>
+
+<script type="text/javascript">
+
+    var folders = document.querySelectorAll('.folder[data-search]');
+
+    var searchBox = document.getElementById('search');
+    searchBox.addEventListener('keyup', function (e) {
+        var box = e.target;
+        var value = box.value.toLowerCase();
+        
+        for (var i = 0; i < folders.length; i++) {
+            var folder = folders[i];
+
+            var name = folder.dataset['search'];
+            var index = name.indexOf(value);
+            if (index > -1)
+                folder.style.display = 'block';
+            else
+                folder.style.display = 'none';
+        }
+    });
+
+</script>
