--- a/Neptuo.WebSite/Views/Content/Project.cshtml
+++ b/Neptuo.WebSite/Views/Content/Project.cshtml
@@ -13,7 +13,7 @@
 </div>
 
 <div class="container">
-    <input id="search" type="text" class="folder" placeholder="Search projects..." />
+    <input id="search" type="text" class="folder" placeholder="Search (@Model.Count()) projects..." />
 
     @foreach (var project in Model)
     {
