--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -35,7 +35,7 @@
     <div class="folder">
         <h2 class="folder-heading">
             <img src="http://filebrowser.magiccms.org/img/NET.png" height="30" />
-            @Html.ActionLink(".NET packages", "Project", new { type = "dev" })
+            @Html.ActionLink(".NET libraries/packages", "Project", new { type = "dev" })
         </h2>
         
         <p>
@@ -43,7 +43,11 @@
             opensourced at <a href="http://www.github.com/neptuo">GitHub</a>. 
         </p>
         <p>
-            These projects are coded in C#.
+            These projects are coded in C# and starts with extensions for System.Core, goes through extensible converters, formatters 
+            to complex features like CQRS and EventSourcing implementations.
+        </p>
+        <p>
+            We use GitHub for hosting source codes and release information at <a href="http://github.com/neptuo">github.com/neptuo</a>.
         </p>
         <p>
             Production ready binaries are than hosted on <a href="http://www.nuget.org/profiles/neptuo">NuGet</a>
