--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -72,7 +72,7 @@
 
         <p>
             There you can find some applications for extending experience with Windows OS 
-            (like <a href="http://apps.neptuo.com/#/winrun">WinRun</a> and <a href="http://apps.neptuo.com/#/windows-dock">WindowsDock</a>)
+            (like <a href="http://apps.neptuo.com/#/winrun">WinRun</a> and @Html.ActionLink("WindowsDock", "Project", new { type = "desktop", project = "windowsdock" })
             or standart desktop applications (like <a href="http://apps.neptuo.com/#/media-library">MediaLibrary</a>).
         </p>
         <p>
