Add partial description of is4wfw.

--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -83,7 +83,11 @@
         <h2 class="folder-heading">is4wfw</h2>
 
         <p>
-            ...
+            The is4wfw is a PHP based content management system. It uses custom XML tags for marking places that should be replaced by a dynamic content.
+            The most custom tags supports templating, so we can generate any content required by the use case.
+        </p>
+        <p>
+            The CMS supports users and roles and allows restricting access to the sections per user.
         </p>
     </div>
     <div class="folder">
