Add comment about WebDesk.

--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -101,4 +101,11 @@
             </p>
         </div>
     </div>
+    @*<div class="folder">
+        <h2 class="folder-heading">WebDesk</h2>
+
+        <p>
+            ...
+        </p>
+    </div>*@
 </div>
