Update info about is4wfw.

--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -19,8 +19,6 @@
             <span class="glyphicon folder-switch"></span>
         </h2>
         <div class="folder-content">
-            <h1 style="color: red">TODO: Upravit nte-admin.aspone.cz tak, aby nešli editovat objekty s ID=1, a zpřístupnit veřejně...</h1>
-
             <p>
                 The TemplateEngine is a proof of concept. It's information system build on UI templates that are compiled to server side .NET assembly
                 and to a javascript. When the user first hits the URL, server-side pre-rendered HTML is loaded and displayed. All the interactions
@@ -93,12 +91,14 @@
             <span class="glyphicon folder-switch"></span>
         </h2>
         <div class="folder-content">
-            The is4wfw is a PHP based content management system. It uses custom XML tags for marking places that should be replaced by a dynamic content.
-            The most custom tags supports templating, so we can generate any content required by the use case.
+            <p>
+                The is4wfw is a PHP based content management system. It uses custom XML tags for marking places that should be replaced by a dynamic content.
+                The most custom tags supports templating, so we can generate any content required by the use case.
             </p>
             <p>
                 The CMS supports users and roles and allows restricting access to the sections per user.
             </p>
+            <p>More info coming...</p>
         </div>
     </div>
     @*<div class="folder">
