Add target=_blank for windows applications.

--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -71,7 +71,7 @@
     </div>
     <div class="folder folder-collapsed">
         <h2 class="folder-heading">
-            <a href="http://apps.neptuo.com/">Windows applications</a>
+            <a target="_blank" href="http://apps.neptuo.com/">Windows applications</a>
             <span class="glyphicon folder-switch"></span>
         </h2>
         <div class="folder-content">
