--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -77,7 +77,8 @@
         <div class="folder-content">
             <p>
                 There you can find some applications for extending experience with Windows OS
-                (like <a href="http://apps.neptuo.com/#/winrun">WinRun</a> and @Html.ActionLink("WindowsDock", "Project", new { type = "desktop", project = "windowsdock" })
+                (like <a href="http://apps.neptuo.com/#/winrun">WinRun</a>, @Html.ActionLink("WindowsDock", "Project", new { type = "desktop", project = "windowsdock" }) and
+                @Html.ActionLink("SolutionRunner", "Project", new { type = "desktop", project = "solutionrunner" })
                 or standart desktop applications (like <a href="http://apps.neptuo.com/#/media-library">MediaLibrary</a>).
             </p>
             <p>
